multitenant-k8s/manifests/karpenter-service-monitor.yaml
# karpenter-servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter-metrics
  namespace: karpenter
  labels:
    app.kubernetes.io/name: karpenter
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: karpenter
